--- a/packages/datasheet/package.json
+++ b/packages/datasheet/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint --fix --no-cache ./src ./pages"
   },
   "engines": {
-    "node": "16.15.0"
+    "node": "18.x"
   },
   "dependencies": {
     "@apitable/components": "*",
